# cotas

./: .gitignore  CLAUDE.md  CoTAS.sln  Makefile  README.md  TASPro5Book.txt  pyproject.toml
book/: build_book.py  config.yaml
command_reference/: A-2.md  ABCDEFGHI.md  ABS().md  ABS(1).md  ACOS().md  ADD.md  ALOCARY().md  ARRAY_READ.md  ARRAY_WRITE.md  ASC().md  ASIN(1).md  ASK.md  ATAN().md  ATAN2().md  AUTODEC.md  AUTO_DECREMENT_LIST.md  AUTO_INCREMENT_LIST.md  AUTO_RUN.md  AVAIL(1).md  BC.md  BELL.md  BOF().md  CAPTION.md  CASE_1.md  CASE_3.md  CBYT().md  CHAIN.md  CHANGE_DICTIONARY_PATH.md  CHR().md  CINT(1).md  CLNUM().md  CLRPE.md  CLRSF.md  CMNTH(1).md  CO().md  COMMAND.md  COMMENT.md  COMPANY_CODE.md  COMPILER_DIRECTIVE.md  COMPILE_PROGRAM.md  (+231 more)
command_reference_v2/: .F..md  .T..md  A-1.md  A.md  ACOS(1).md  ACS().md  ALLOCATE_FIELD.md  ARRAY_DEALLOCATE.md  ARRAY_FIELD_DISPLAY.md  ARRAY_SORT.md  ARRAY_UPDATE.md  ASC(1).md  ASIN().md  ASK().md  ATAN(1).md  AUTOENTER.md  AUTOINC.md  AUTO_ENTER_LIST.md  AVAIL().md  BKG.md  BOF(1).md  BUTTON.md  CASE.md  CASE_2.md  CBYT(1).md  CCR().md  CDOW().md  CDOW(1).md  CEIL().md  CEIL(1).md  CFLT().md  CFLT(1).md  CHAIN_RUN_ANYTIME_PROGRAM.md  CHR(1).md  CINT().md  CLEAR_FILE_BUFFER.md  CLEAR_LINE.md  CLEAR_PROGRAM_ERROR.md  CLEAR_SCREEN.md  CLEAR_SCREEN_FIELDS.md  (+213 more)
docs/: PLAN.md  README.md  compiler-byte-format.md  conventions.md  data-types.md  decompiler-findings.md  tas-reference.md
scripts/: batch_roundtrip.py  batch_roundtrip_test.sh  extract_commands.py  extract_reference.py  generate_compiler_tables.py  rundiff.py
(+953 files in other folders)
