[project]
name = "cotas"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.10"
dependencies = [
    "openai>=2.21.0",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "weasyprint>=62.0",
    "jinja2>=3.1.0",
    "markdown>=3.5",
    "pygments>=2.17",
    "pyyaml>=6.0",
]
